余計な空白を削除

--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
         //     const v = data.val();
         //     let list = [];
         //     console.log(v);
-        //     console.log(k);
-
-            
+        //     console.log(k)
 
         //     data.forEach(function(children){
         //         console.log(v.title);
